src/index.scss
$color-orange: #e4c41c;
$transition-main: 0.3s ease-out;

*{
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}

body {
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}


// Header Section

.header-cont{
  .top-header{
    width: 100%;
    height: 45px;
    display: flex;
    align-items: center;
    justify-content: center;
    color: #fff;
    background-image: url("../public/assets/bitnine-banner.png");
    z-index: 9;

    h6{
      font-size: 18px;
      letter-spacing: .7px;
      font-weight: 400;
      transition: 0.4s ease-in;

      span{
        font-weight: bold;
        margin-right: 5px;
      }

      &:hover{
        color: $color-orange;
      }
      
    }
  }
  
  .main-header{
    background-color: #000000;
    color: #ffffff;
    
    .social-row{
      height: 45px;
      padding: 0 10px;
      position: relative;

      .right{
        height: 100%;
        float: right;
        display: flex;
        align-items: center;

        .info{
          display: flex;
          height: 100%;
          align-items: center;

          .search{
            margin-right: 20px;

            input{
              width: 0;
              background-color: inherit;
              color: #fff;
              font-size: 14px;
              font-weight: normal;
              border: none;
              margin-right: 10px;
              transition: width 0.3s ease;

              &:focus{
                outline: none;
              }
            }

            .search-active{
              width: 150px;
            }

            span{
              cursor: pointer;
              font-size: 18px;
              transition: transform 0.5s ease;

              .fa-times{
                color: gray;
              }

              &:hover{
                color: gray;
              }
            }
          }

          h6{
            margin: auto 0;
            margin-right: 70px;
            text-transform: uppercase;
            font-size: 16px;
            font-weight: 300;
            transition: 0.3s ease-out;
            cursor: pointer;

            &:hover{
              width: 70px;
              padding: 5px 0;
              color: gray;
            }
          }
        }

        .icons{
          display: flex;

          span {
           font-size: 18px;
           display: inline-block;
           padding: 5px 10px;
           text-align: center;
           color: #fff;
           background: transparent; /* default color */
           /* "to top" - affects initial color */
           background: linear-gradient(to top, transparent 50%, darkblue 50%) bottom;
           background-size: 100% 200%;
           /* Adjust the background size for top-to-bottom effect */
           transition: background-position 0.3s ease-out;
           cursor: pointer;

          &:first-child {
              /* Apply different background to odd child spans */
              color: $color-orange;
              background: linear-gradient(to top, transparent 50%, darkgray 50%) bottom;
              background-size: 100% 200%;
            }

            &:last-child {
                /* Apply different background to odd child spans */
                background: linear-gradient(to top, transparent 50%, palegreen 50%) bottom;
                background-size: 100% 200%;
              }
            
              &:nth-child(2) {
                /* Apply different background to even child spans */
                background: linear-gradient(to top, transparent 50%, red 50%) bottom;
                background-size: 100% 200%;
              }

           &:hover{
             background-position: top;
           }
            
          } 
        }
      }
    }

    .navbar-row{
      display: flex;
      align-items: center !important;
      justify-content: space-between;
      padding: 20px 50px;

      .logo-cont{
        display: block;

          .lan-btn{
            margin-left: 10px;
            width: 170px;
            background-color: #ffffffea;
            color: gray;
            border: 2px solid darkblue;
            border-radius: 7px;
            font-size: 16px;
            padding: 10px;
            cursor: pointer;
            position: absolute;
            top: 90px;

            &:focus{
              outline: none;
            }
          }

          .menu-bar{
            display: none;
          }
      }

    .menu{
      display: flex;

      ul{
        display: inline-flex;
        list-style-type: none;
        margin: auto 0;

        li{
          padding: 0 10px;
          text-transform: uppercase;
          font-size: 16px;
          letter-spacing: 1px;
          font-weight: 400;
          transition: $transition-main;
          cursor: pointer;

          &:first-child{
            color: $color-orange;
          }

          &:hover{
            color: $color-orange;
          }
        }
      }

      button{
        width: 100px;
        margin: auto 0;
        margin-left: 20px;
        background-color: darkblue;
        border-radius: 5px;
        border: none;
        color: #fff;
        text-transform: uppercase;
        font-size: 16px;
        padding: 5px 10px;
      }
    }
  }
  }
}


@media (max-width: 599px){
  .header-cont{

  .top-header{
    height: 60px !important;
    padding: 10px !important;

    .h6{
      max-width: 300px !important;
      font-size: 10px !important;
      text-align: center !important;
      font-weight: 100 !important;
      background-color: red !important;
    }

  }
  .social-row{
    display: none;
  }

  .navbar-row{
    justify-content: unset !important;
    flex-direction: column;
    padding: 0 !important;
    position: relative !important;

    .logo-cont{
      height: 70px;
      width: 100%;
      padding: 10px;

      img{
        margin: 10px;
        width: 100px;
        height: 30px;
        object-fit: contain;
      }
      .lan-btn{
        width: auto !important;
        padding: 5px 0 !important;
        top: 0px !important;
        right: 60px;
        font-size: 12px !important;
      }

      .menu-bar{
        display: block;
        cursor: pointer;
        margin: auto 0 !important;

        i{
          color: #fff;
          font-size: 22px;
          float: right;
          padding: 10px !important;
        }
      }
    }

    .menu{
      flex-direction: column;
      width: 100%;
      position: absolute;
      top: 70px;
      height: 0;
      opacity: 0;
      background-color: #000000;
      transition: opacity 0.5s ease-out;
      transition: height 0.5s ease-out;

      ul{
        display: inline-block !important;
        padding: 0;
        
        li{
          padding: 10px 10px !important;
          color: gray;


          &:first-child{
            border-top: 0.5px solid gray;
          }
        }
      }

      button{
        margin-left: 10px !important;
        margin-bottom: 10px !important;
      }
    }

    .show-menu{
      height: 355px;
      opacity: 1;
    }
  }
}
}

